<resources>
    <string name="app_name">MyClik</string>
    <string name="net_exception">连接错误</string>
    <string name="unauthorised_out">身份验证过期</string>
    <string name="net_timeout">网络连接超时</string>
    <string name="service_error">服务错误</string>
    <string name="json_parse">解析失败</string>
    <string name="net_connect_failture">网络连接失败</string>
    <string name="net_ssl_error">证书验证失败</string>
    <string name="data_loading">加载中...</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_sure">确定</string>
    <string name="xrecyclerview_listview_header_hint_normal">pull to refresh</string>
    <string name="xrecyclerview_listview_header_hint_release">release to start refresh</string>
    <string name="xrecyclerview_listview_loading">loading...</string>
    <string name="xrecyclerview_nomore_loading">no more to be loaded</string>
    <string name="xrecyclerview_refreshing">refreshing...</string>
    <string name="xrecyclerview_refresh_done">refresh done</string>
    <string name="xrecyclerview_loading_done">loading done</string>
    <string name="xrecyclerview_listview_header_last_time">last update：</string>
    <string name="go_seting">前往设置</string>
    <string name="cancel">Cancelar</string>
    <string name="facebook">facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="copiarlink">Copiar link</string>
    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">松开刷新数据</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新...</string>
    <string name="xrefreshview_header_hint_loading">正在加载...</string>
    <string name="xrefreshview_header_hint_loaded">加载完成</string>
    <string name="xrefreshview_header_hint_loaded_fail">加载失败</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="xrefreshview_footer_hint_complete">已无更多数据</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_release">松开加载更多</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="xrefreshview_refresh_loading">加载中...</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="update">Atualizar</string>
    <string name="update_version">Atualizar versão</string>
    <string name="new_version">Versão mais recente:</string>
    <string name="login_load_note">Siap Melayani Kapanpun dan Dimanapun</string>
    <string name="login">LOGIN</string>
    <string name="regit">注册</string>
    <string name="input_phone">masukan no HP </string>
    <string name="input_email">输入email </string>
    <string name="input_cpf">输入cpf </string>
    <string name="regit_proctol">telah menyetujui 《persyaratan &amp; ketentuan MyKlik》 </string>
    <string name="regit_proctol_end">de Privacidade de %s</string>
    <string name="go_login">udah terdaftar?silahkan LOGIN</string>
    <string name="go_regit">Não tem conta, faça cadastro</string>
    <string name="send_vetify_code_note">发送短信验证码至注册手机 %1$s %2$s</string>
    <string name="send_vetify_code">Kirim Kode</string>
    <string name="set_login_pw">请设置登录密码</string>
    <string name="set_login_re_pw">请重复输入登录密码</string>
    <string name="set_login_pw_rule">6-20位字符，含数字、字母及符号任意两种类型</string>
    <string name="finshi_set">完成设置</string>
    <string name="phone">手机号</string>
    <string name="login_pw">登录密码</string>
    <string name="forget_pw">忘记密码?</string>
    <string name="input_invation">输入邀请码</string>
    <string name="pass">跳过此步</string>
    <string name="agree_regit">请同意注册协议</string>
    <string name="email_error">请输入正确邮箱</string>
    <string name="phone_error">请输入正确手机格式</string>
    <string name="input_passwd">请输入登录密码</string>
    <string name="input_passwd_match">两次输入的密码不一致</string>
    <string name="input_vertify_code">masukkan kode verifikasi</string>
    <string name="location_permission">为了你的账户安全，请开启定位权限</string>
    <string name="set_login_passwd">设置登录密码</string>
    <string name="pass_rule">密码不符合要求</string>
    <string name="no_login_state">未登录</string>
    <string name="history_order">历史订单</string>
    <string name="coupon">优惠券</string>
    <string name="contract_us">联系客服</string>
    <string name="invate_friend">邀请好友</string>
    <string name="about_pay">关于还款</string>
    <string name="about_us">关于我们</string>
    <string name="set">设置</string>
    <string name="login_out">退出</string>
    <string name="quit_back_note">再返回一次退出应用</string>
    <string name="no_location_permission">为保证用户账户安全，请前往设置开启位置授权</string>
    <string name="no_phone_permission">为保证用户账户安全，请前往设置开启读取手机状态授权</string>
    <string name="no_open_gps">为了更好的获取位置信息，请前往设置打开gps</string>
    <string name="no_sms_permission">请前往设置打开短信权限</string>
    <string name="area">巴西</string>
    <string name="meglive_auth_progress">正在联网授权中...</string>
    <string name="meglive_auth_failed">联网授权失败！请检查网络或找服务商</string>
    <string name="meglive_returnbtn">返回首页</string>
    <string name="meglive_liveness_again">重新验证活体</string>
    <string name="meglive_reupload">上传图片失败，请重新上传。</string>
    <string name="meglive_camera">请您打开相机权限</string>
    <string name="select_pic">从相册选择图片</string>
    <string name="pai_zhao">拍照</string>
    <string name="select_file_error">选择图片文件出错</string>
    <string name="forget_login_passwd">忘记登录密码</string>
    <string name="main_show_max">Pinjaman Maksimum(Rupiah)</string>
    <string name="main_3_minutes">3 menit pendaftaran，paling cepat 2 jam sudah cair</string>
    <string name="main_loan_guide">Panduan</string>
    <string name="main_help_center">Pusat Bantuan</string>
    <string name="main_immediately_apply">Pengajuan Pinjaman</string>
    <string name="main_simpele_fast">简单的要求，快速贷款</string>
    <string name="main_commend">Rekomendasi</string>
    <string name="main_commend_no">Tidak direkomendasikan</string>
    <string name="main_professional_stable">——Profesional dan dapat diandalkan——</string>
    <string name="main_waiting_evaluating">Mohon ditunggu, sedang dalam proses</string>
    <string name="main_audit_failed">Pelanggan YTH，Mohon maaf, Anda tidak memenuhi persyaratan untuk pengajuan pinjaman MyKlik, harap mendaftar ulang setelah %s hari。</string>
    <string name="main_introduce_interest">每月1.6％-22％的利率</string>
    <string name="main_installment">高价值的分期付款</string>
    <string name="main_short_term_loan">Pinjaman Jangka Pendek</string>
    <string name="main_withdraw_money">Pencairan ke rekening</string>
    <string name="main_bank_hanling">银行处理中...</string>
    <string name="main_loan_account">Sedang diproses oleh Bank</string>
    <string name="main_loan_account_day">Jumlah Pinjaman（Rp）</string>
    <string name="main_loan_account_stage">Durasi（Hari）</string>
    <string name="main_loan_failure_explain">Proses pencairan oleh bank GAGAL, silahkan cek informasi rekening tujuan dan ulangi pencairan dana！</string>
    <string name="main_loan_failure_bottom">Pencairan Segera</string>
    <string name="main_day_left">%s hari Tersisa</string>
    <string name="main_day_overdue">逾期 %s 天</string>
    <string name="main_payment_amount">Total Tagihan（Rp）</string>
    <string name="main_dead_line">截止日期</string>
    <string name="main_payment_now">PEMBAYARAN</string>
    <string name="main_payment_account_month">第%s个月支付的金额</string>
    <string name="main_dalay_rate">Pembayaran yg terlambat akan mengakibatkan bunga penalti dan riwayat kredit buruk serta masuk ke daftar blacklist</string>
    <string name="main_withdraw_amount">Batas Nominal (Rp)</string>
    <string name="main_withdraw_period_long">期数(月)</string>
    <string name="main_withdraw_period_short">Durasi (Hari)</string>
    <string name="main_success_data">Jatuh Tempo：</string>
    <string name="main_reapply">Pengajuan Kembali</string>
    <string name="sms_send_failture">Por favor, autorize primeiro</string>
    <string name="send_sucess">发送成功</string>
    <string name="no_action_open">功能暂未开放</string>
    <string name="cut_conent">复制到成功</string>
    <string name="double_fast">请勿重复点击</string>
    <string name="tell_call">电话咨询</string>
    <string name="online_check">在线查询</string>
    <string name="helpfulness">有帮助</string>
    <string name="unhelpfulness">没有帮助</string>
    <string name="help_center">帮助中心</string>
    <string name="check_online_hint">您的意见是我们改进的目标！</string>
    <string name="check_online_select">选择反馈的问题类型</string>
    <string name="check_online_select_loan">贷款问题</string>
    <string name="check_online_select_product">产品体验</string>
    <string name="check_online_select_optimize">异常及优化意见</string>
    <string name="check_online">在线联系</string>
    <string name="check_online_chat_now">马上沟通</string>
    <string name="feedback_hint">您的意见是我们改进的目标！</string>
    <string name="feedback_question">您的意见-必填</string>
    <string name="feedback_question_hint">请输入相关意见</string>
    <string name="feedback_question_hint_limit">0/500</string>
    <string name="feedback_question_add_picture">添加图片（提供问题截图）-选填</string>
    <string name="feedback_add_picture">上传图片</string>
    <string name="feedback_update">提交</string>
    <string name="feedback">体验反馈</string>
    <string name="coupon_title">体验反馈</string>
    <string name="coupon_get_it_now">立即领取</string>
    <string name="coupon_new_only">新客专享</string>
    <string name="coupon_interest_coupon">减息券</string>
    <string name="coupon_infact_loan">实际借款金额满   1000  雷亚尔，\n利息减  30  雷亚尔</string>
    <string name="coupon_loan_deadline">领取后1个月有效</string>
</resources>