<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/view_bg_fff5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_select_pic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_pic"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        style="@style/view_line_h"/>

    <RelativeLayout
        android:id="@+id/paizhao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pai_zhao"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/btn_cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>